# codewalk

./: .gitignore  ACTIONS.md  CLAUDE.md  Cargo.toml  ERROR_AND_SCROLL_FEATURES.md  LOG_STREAMING.md  MODEL_SWITCHING.md  PHASE2_TEST.md  README.md  REFACTORING_SUMMARY.md  SESSION_TEST_INSTRUCTIONS.md  SPECIFICATION.md  STREAMING_JSON_FIX.md  TEXT_WRAPPING.md  agents.md  codebase.md  debug_claude_json.sh  deepinfra.py  monitor_claude.sh  port_to_ios.md  port_to_ios_phasing.md  test_all_phases.sh  test_channel.rs  test_claude_launch.sh  test_confirmation.sh  test_core_confirmation.rs  test_logs.sh  test_phase1_router.sh  test_relay_sim.sh  test_session_logs.sh  test_session_status.sh  test_streaming.sh  test_text_wrap.rs  vision-roadmap.md
apps/VoiceAgent/: .gitignore  Info.plist  README.md  project.yml  run-sim.sh
apps/VoiceRelay/: App.tsx  README.md  app.json  babel.config.js  package-lock.json  package.json
apps/VoiceRelaySwiftUI/: README.md  project.yml  run-sim-with-logs.sh  run-sim.sh
apps/walkcoach/: Info.plist  project.yml  run-sim.sh
apps/walkingcomputer/: .gitignore  .registry.json  CONTEXT_AUTO_LOADING.md  DEBUG_SYNC.md  FLUID_ACTION_REFACTOR.md  Info.plist  Phase2-Complete.md  Phase3-Complete.md  Phase4-Complete.md  Phase5-Complete.md  README.md  REFACTOR-COMPLETE.md  SESSION_ARTIFACTS.md  TestFluidRouting.swift  TestMigration.swift  TestSpecMd.swift  deploy-phone.sh  find-sessions.sh  plan.md  project.yml  run-sim.sh  test-agent.sh  test-main.swift  test_actual_flow.swift  test_message_structure.swift
artifacts/: description.md  description.md.bak-20250921-155145  description.md.reject-20250921-155135  description.md.reject-20250923-111417  description.md.reject-20250923-172324  description.md.reject-20250923-172332  phasing.md  phasing.md.bak-20250921-155242  phasing.md.bak-20250923-172324  phasing.md.reject-20250921-155135  phasing.md.reject-20250923-172241  phasing.md.reject-20250923-172415  phasing_index.json
config/: artifact_editor_prompt.txt
crates/: ARCHITECTURE_SPEC.md  BEHAVIOR_SPEC.md  FROZEN_CONTRACTS.md  MOBILE_INTERFACE_SPEC.md  README.md  STATE_MACHINE_PHASING_PLAN.md  WORKSTATION_REWRITE_GUIDE.md
crates/audio-transcribe/: Cargo.toml
crates/control_center/: Cargo.toml  README.md
crates/control_center/src/: center.rs  lib.rs  logs.rs
crates/control_center/src/executor/: claude.rs  factory.rs  mod.rs  traits.rs
crates/orchestrator/: Cargo.toml  README.md  REFACTOR_PHASE1.md  RFC-orchestrator-refactor-v2.md  RFC-orchestrator-refactor-v3.md  RFC-orchestrator-refactor.md  WORKSTATION_VISION.md  test_features.md
crates/orchestrator-adapters/: Cargo.toml  README.md
crates/orchestrator-adapters/src/: lib.rs
crates/orchestrator-adapters/src/bridge/: mod.rs
crates/orchestrator-adapters/src/relay/: mod.rs
crates/orchestrator-adapters/tests/: adapter_connectivity.rs
crates/orchestrator-core/: Cargo.toml  README.md
crates/orchestrator-core/examples/: test_confirmation.rs
crates/orchestrator-core/src/: lib.rs  ports.rs  session_manager.rs  state.rs
crates/orchestrator-core/src/ports/: mod.rs  monitor.rs  storage.rs  summarizer.rs
crates/orchestrator-core/src/session/: context.rs  history.rs  mod.rs  state.rs
crates/orchestrator-core/tests/: end_to_end_flow.rs  routing_integration.rs  session_lifecycle.rs
crates/orchestrator-tui/: Cargo.toml  README.md
crates/orchestrator-tui/src/: app.rs  constants.rs  handlers.rs  lib.rs  log_types.rs  state.rs  types.rs  utils.rs
crates/orchestrator-tui/src/ui/: confirmation.rs  error_dialog.rs  layout.rs  log_pane.rs  mod.rs  styles.rs
crates/orchestrator-tui/tests/: ui_isolation.rs
crates/orchestrator/examples/: test_wrap.rs
crates/orchestrator/src/: app.rs  app_new.rs  backend.rs  config.rs  confirmation_handler.rs  constants.rs  core_bridge.rs  handlers.rs  lib.rs  log_monitor.rs  log_summarizer.rs  logger.rs  main.rs  relay_client.rs  session_history.rs  settings.rs  state_observer.rs  types.rs
crates/orchestrator/src/executor/: claude.rs  example_devin.rs  mod.rs
crates/orchestrator/src/ui/: components.rs  log_pane.rs  mod.rs
crates/orchestrator/src/utils/: mod.rs  text_wrap.rs
crates/orchestrator/tests/: confirmation_e2e.rs  full_user_journey.rs  thin_coordination.rs
crates/router/: Cargo.toml  README.md
crates/router/examples/: test_model.rs  test_router.rs
crates/router/src/: confirmation.rs  lib.rs  memory.rs  traits.rs  types.rs
crates/router/src/extractors/: json.rs
crates/router/src/providers/: groq.rs  mock.rs
crates/router/tests/: confirmation_test.rs
crates/stt/: Cargo.toml  README.md
crates/stt/src/: traits.rs
crates/stt/src/providers/: groq.rs
crates/tui-app/: Cargo.toml
crates/tui-app/src/: app.rs  backend.rs  claude_launcher.rs  handlers.rs  main.rs  types.rs
crates/tui-app/src/executor/: claude.rs  factory.rs  traits.rs
crates/tui-app/src/ui/: components.rs  mod.rs  styles.rs
gemini-live-mvp/: README.md  app-with-tools.js  app.js  index.js  package-lock.json  package.json  phase2-router.js  phase3-writing.js  phase4-5-combined.js  plan.md  speccer.js
logs/: trace-20250921.jsonl  trace-20250923.jsonl
relay/: README.md  codebase.md  run-demo.sh  run-test.sh
relay/client-mobile/: Cargo.toml  README.md  build.rs
relay/client-mobile/src/: android.rs  client.rs  ios.rs  lib.rs
relay/client-workstation/: Cargo.toml
relay/client-workstation/src/: main.rs
relay/server/: Cargo.toml  README.md
relay/server/src/: main.rs  session.rs  websocket.rs
relay/tests/: Cargo.toml
relay/tests/src/: main.rs
search-distill/: .env.example  .gitignore  Cargo.toml  README.md
search-distill/src/: main.rs
src/: app.rs  artifacts.rs  audio.rs  backend.rs  config.rs  constants.rs  global_hotkey.rs  groq.rs  handlers.rs  interfaces.rs  io_guard.rs  lib.rs  main.rs  orchestrator.rs  router.rs  services.rs  trace.rs  tts_backend.rs  types.rs
stt-clipboard/: .gitignore  Cargo.toml  README.md  implementation-plan.md
tests/: action_guard.rs
tools/: mobile-core-bot.mjs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+267 files in other folders)
