[workspace]
members = [
    "crates/control_center",
    "crates/orchestrator",
    "crates/stt", 
    "crates/router",
    "crates/llm",
    "crates/protocol",
    "crates/orchestrator-core",
    "relay/server",
    "relay/client-workstation",
    "relay/client-mobile",
    "xtask", "crates/orchestrator-adapters",
    
]
resolver = "2"
default-members = ["crates/orchestrator"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CodeWalk Team"]

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
futures-util = "0.3"
tokio-tungstenite = "0.24"
once_cell = "1.19"
