[package]
name = "codewalk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cpal = "0.16"
device_query = "4"
dotenvy = "0.15"
hound = "3.5"
rodio = "0.17"
audrey = "0.3"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
