[package]
name = "search_distill"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
html2text = "0.7"
anyhow = "1"
dotenv = "0.15"
futures = "0.3"
