[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
which = "6"
