[package]
name = "control_center"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "control_center"
path = "src/lib.rs"

[dependencies]
# Workspace
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

# External
notify = "6.1"

