[package]
name = "orchestrator-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
protocol = { path = "../protocol" }
orchestrator-core = { path = "../orchestrator-core" }
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true

[features]
# Optional UI modules (disabled by default while extraction stabilizes)
ui = []
# Declare feature flags referenced in code to avoid unexpected cfg warnings
tui-stt = []
tui-input = []
