[package]
name = "router"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
llm = { path = "../llm" }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
dotenv = "0.15"