[package]
name = "stt"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

# Audio recording
cpal = "=0.13.5"
hound = "3.5"

# HTTP client for transcription services
reqwest = { version = "0.12", features = ["multipart", "stream", "json"] }

# For thread-local storage
lazy_static = "1.4"