[package]
name = "tui-app"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "codewalk"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

# Local crates
audio-transcribe = { path = "../audio-transcribe" }
llm-interface = { path = "../llm-interface" }

# TUI dependencies
ratatui = "0.28"
crossterm = "0.28"

# Utilities
lazy_static = "1.4"