[package]
name = "relay-client-mobile"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "relay_client_mobile"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "relay-phone-demo"
path = "src/bin/phone_demo.rs"

[dependencies]
tokio = { version = "1.40", features = ["rt", "net", "sync", "macros", "time"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
once_cell = "1.20"
parking_lot = "0.12"
lazy_static = "1.5"

# Android JNI support
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[build-dependencies]
cbindgen = "0.27"
