[package]
name = "relay-client-workstation"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "relay-workstation"
path = "src/main.rs"

[[bin]]
name = "relay-workstation-demo"
path = "src/bin/demo.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
qrcode = "0.14"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
